--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,7 +238,7 @@ body {
     font-weight: bold;
     color: #0f0;
     text-align: center;
-    margin: 10px 0 15px 0;
+    margin: 10px 0 10px 0;
     padding-bottom: 10px;
     border-bottom: 1px solid #0f0;
 }
@@ -262,7 +262,7 @@ body {
 #terminalBottomBar {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: left;
 }
 
 #fetch-status {
@@ -438,17 +438,17 @@ body {
 
 /* Added styling for terminal form elements */
 .terminal-form {
-    margin-top: 20px;
+    margin-top: 0px;
     color: #0f0;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 0px;
 }
 
 .form-group label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     font-size: 16px;
 }
 
