--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,7 +164,7 @@ body {
 #terminalBox {
     width: 80%;
     height: 600px;
-    background-color: #1e1e1e;
+    background-color: #333;
     color: #0f0;
     font-family: monospace;
     display: flex;
@@ -635,4 +635,9 @@ body.dark-theme #officeCanvas {
     .submit-container {
         margin-bottom: 30px;
     }
+}
+
+/* Dark theme terminal style */
+body.dark-theme #terminalBox {
+    background-color: #4b4b4b;
 }
